opt_30B-gpu_batch_size-4-gpu_weight_percent-50-cpu_weight_percent-50.log
Traceback (most recent call last):
  File "/opt/conda/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/opt/conda/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/lambda/FlexGen/flexgen/flex_opt.py", line 1300
    parser.add_argument("--cut_gen_len", type=int, default=5
                                                           ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
